# set-proc-affinity

./: Cargo.toml
bindings/: Cargo.toml  build.rs
src/: main.rs
